# copula-default-graph

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARPM_INTEGRATION_ANALYSIS.md  CAPABILITIES.md  CLAUDE.md  CLUSTERS_PLAN.md  METHODOLOGY.md  PROMPTS.md  README.md  RECIPES.md  RISK_RATIO_PLAN.md  ROADMAP.md  ROLES.md  TUTORIAL.md  copula_default_analysis.ipynb  debug.py  demo_clusters.py  demo_full_pipeline.py  generate_presentation.py  generate_presentation_ru.py  main.py  pyproject.toml  requirements.txt  test_copula_framework.py
.claude/: launch.json
docs/: architecture.html  risk_department.html
implementation_plans/: 02_pd_calibration_backtesting_plan.md  03_ead_lgd_models_plan.md  04_entropy_stress_views_plan.md  06_lifetime_pd_markov_plan.md  07_copula_parameter_calibration_plan.md  08_factor_loading_fp_family_plan.md  README.md
notebooks/: 00_ingest.ipynb  10_pd.ipynb  20_graph.ipynb  30_copula.ipynb  40_transitions.ipynb  50_metrics.ipynb  99_run_all.ipynb  README.md  _build_notebooks.py
output/: presentation.html  presentation_arpm_ru.html  presentation_ru.html
pipelines/: __init__.py  artifacts.py  runner.py  stage_00_ingest.py  stage_10_pd.py  stage_20_graph.py  stage_25_loadings.py  stage_30_copula.py  stage_40_transitions.py  stage_50_metrics.py
src/: __init__.py  agents.py  client_value_metrics.py  cluster_metrics.py  conditional_fp.py  config.py  copula_calibration.py  copula_model.py  credit_transitions.py  customer_profile.py  data_generator.py  dependence.py  factor_copula.py  flexible_probs.py  geo_clusters.py  graph_features.py  loaders.py  (+11 more)
(+10 files in other folders)
